--- a/src/main/resources/templates/admin/important-person-tasks.html
+++ b/src/main/resources/templates/admin/important-person-tasks.html
@@ -2,10 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Top-10 Important Person Tasks</title>
+  <title>Top-10 Important Tasks</title>
 </head>
 <body>
-<h2>Top-10 Important Person Tasks</h2>
+<h2>Top-10 Important Tasks</h2>
 <p><a th:href="@{/admin/web}">Back</a></p>
 
 <table border="1" cellpadding="6">
