--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -18,7 +18,7 @@
     <li><a href="/admin/web/employees">👥 员工管理</a></li>
     <li><a href="/admin/web/departments">🏢 部门查看</a></li>
     <li><a href="/admin/web/important-matters">⭐ 十大重要事项</a></li>
-    <li><a href="/admin/web/important-person-tasks">📄 十大重要人任务</a></li>
+    <li><a href="/admin/web/important-person-tasks">📄 十大重要任务</a></li>
   </ul>
 </body>
 </html>
