--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -201,7 +201,7 @@
     </form>
     
     <div class="login-footer">
-      <p>默认管理员账号：admin@test.com / admin</p>
+      <p>默认管理员账号：admin@test.com / 123456</p>
     </div>
   </div>
 </body>
